# autonomy-undecidability

./: .gitignore  CITATION.cff  DISCLAIMER.md  README.md  pyproject.toml  start_here.md
.github/workflows/: quality_gate.yml
examples/: run_demo.py
provenance/: original_reduction_script.py
src/computational_autonomy/: __init__.py  cli.py  controller.py  environment.py  machine.py  reduction.py
tests/: test_cli.py  test_environment.py  test_machine.py  test_reduction.py
theory/: definitions.md  proof_note.md
