[build-system]
requires = ["hatchling>=1.22.2"]
build-backend = "hatchling.build"

[project]
name = "autonomy-undecidability"
version = "0.1.1"
description = "Theory and executable demo: undecidability limits for verifying computational autonomy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bradley Saucier" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
autonomy-demo = "computational_autonomy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/computational_autonomy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/computational_autonomy"]

[tool.coverage.report]
fail_under = 85
show_missing = true
